<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <Button
        android:id="@+id/btnZoomIn"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/zoomIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnTakePic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/takePic"
        app:layout_constraintStart_toEndOf="@+id/btnZoomOut"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnExchange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/exchangeCamera"
        app:layout_constraintStart_toEndOf="@+id/btnTakePic"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnZoomOut"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/zoomOut"
        app:layout_constraintStart_toEndOf="@+id/btnZoomIn"
        app:layout_constraintTop_toTopOf="parent" />

    <com.wxson.camera_comm.AutoFitTextureView
        android:id="@+id/textureView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnZoomIn" />

</androidx.constraintlayout.widget.ConstraintLayout>